--- a/shoosh/src/App.css
+++ b/shoosh/src/App.css
@@ -1,6 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Staatliches&display=swap');
+
+
 .App {
   text-align: center;
 }
+
+*{
+  background-color: #F1E8B8;
+  background: url('../src/assets/images/image.png')
+  center 200px / 200px
+  repeat
+  ;
+
+}
+
 
 .App-logo {
   height: 40vmin;
@@ -25,7 +39,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #70A0AF;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +49,55 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h3 {
+  background: #70A0AF;
+  padding: 50px;
+  border-radius: 30px;
+  color:  white;
+  font-weight: 800;
+  margin: 30px;
+  font-size: x-large;
+  border: 30px #282c34;
+}
+
+.header {
+  font-size: 200px;
+  flex: content;
+  
+  margin: 40px;
+  color: #ffffff;
+}
+
+button {
+  height: 100px;
+  width: 300px;
+  flex: auto;
+  
+  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Staatliches', cursive;
+  color: white;
+  background: #518787;
+  font-size: 40px;
+  border-radius: 40px;
+  box-shadow:inset 0 0 0 #590004;
+  transition: ease-out .5s;
+  margin: 10px;
+}
+
+
+
+button:hover {
+  box-shadow:inset 300px 0 0 #DE6B48;
+  cursor: pointer;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  align-items: center;
+  justify-items: center;
 }
